# verity-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.json  server.py
