[project]
name = "verity-mcp"
version = "0.4.0"
description = "Independent fail-closed 'verify before you act' trust gate for AI agents — MCP server. Tiered, disclosed, pay-per-call via x402 (USDC on Base): quick_verify $0.02, grounded_verify $0.25 (live web citations), pro_verify $0.35, free verify_receipt (checks Ed25519-signed verdict receipts), plus prompt-injection, moderation, PII, and pre-action guardrail checks at $0.02. Keyless."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Verity Labs", email = "veritylayer@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "agent", "x402", "trust", "verification", "hallucination", "guardrail", "ai-safety", "prompt-injection"]
dependencies = ["mcp>=1.2.0", "httpx"]

[project.optional-dependencies]
# Opt-in wallet mode: lets this server settle its own x402 micro-payments so the paid
# tools actually return verdicts. Keyless remains the default and needs none of this.
# FLOOR IS 0.2.2: 0.2.0's payer had NO spend cap (it would sign whatever a 402 named,
# capped only by wallet balance) and 0.2.1 still allowed pip to resolve the x402 v1
# protocol client, which cannot read our v2 challenge. Wallet mode hands this payer a
# real key, so the floor is the first version that is both capped and v2-correct.
x402 = ["verity-guard[x402]>=0.2.2"]

[project.urls]
Homepage = "https://veritylayer.dev"
Repository = "https://github.com/meloliva14/verity-mcp"

[project.scripts]
verity-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
